--- a/Obis/app/views/home/css/styleHome.css
+++ b/Obis/app/views/home/css/styleHome.css
@@ -1,3 +1,60 @@
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+#myInput {
+    box-sizing: border-box;
+    background-image: url('searchingIcon.png');
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {
+    outline: 3px solid #ddd;
+}
+
+.filter {
+    position: relative;
+    display: inline-block;
+}
+
+.filter-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    border: 1px solid #ddd;
+    z-index: 1;
+}
+
+.filter-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.filter-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.show {
+    display: block;
+}
+
 body
 {
 background-color:#f4f4f4;
@@ -98,8 +155,15 @@ font-size: 40px;
     line-height: 20px; 
     display:inline-block; 
     padding: 20px;
-      
-   
+}
+
+.incercuit1 table {
+    text-align: center;
+    position: relative;
+    text-decoration: none;
+    line-height: 20px; 
+    display:inline-block; 
+    padding: 20px;
 }
 .incercuit1 p:before
 {
@@ -239,7 +303,6 @@ header ul
 
 header li
 {
-    /* float:left; */
     display:inline;
     padding:0 20px 20px;
 }
